--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "Frozen Music Bot",
   "description": "❄️ Frozen Music — Free Telegram VC music bot that runs on Render, Koyeb, Railway & Heroku easily!",
   "repository": "https://github.com/prashantsahlot/frozenvcmusicbot",
-  "logo": "https://telegra.ph/file/d02b81736a7e9519c6386.jpg",
+  "logo": "https://files.catbox.moe/bswmmi.jpg",
   "keywords": ["telegram", "music", "bot", "vc", "python"],
   "env": {
     "API_HASH": {
